more updates with styling in coding section

--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
 <!doctype html>
 <html class="no-js" lang="">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
-
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Righteous|Audiowide|Bungee|Fredoka+One" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
+
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-
 
         <ul class="topnav" id="myTopnav">
           <li><a href="#" id="home">HOME</a></li>
@@ -46,16 +44,19 @@
 
         <main id="codingpage">
           <h1>Coding</h1>
+          <p>View all of my personal and ongoing coding programs.</p>
           <div id="codingcontent">
               <section class="projects">
-                <div id="project1" class="portfolioproject">iSimon Says</div>
-                <div id="isimonsays" class="projectcontent"></div>
-                <div id="project2" class="portfolioproject">Decade Footwear</div>
-                <div id="decadefootwear" class="projectcontent"></div>
-                <div id="project3" class="portfolioproject">Hey, I'm Bored!</div>
-                <div id="heyimbored" class="projectcontent"></div>
-                <div id="project4" class="portfolioproject"> Project Four </div>
-                <div id="project4content" class="projectcontent"></div>
+                <div class="portfolioproject" style="font-family: 'Audiowide'; background-image: url('./img/harddrive.jpg')">iSimon Says</div>
+                <div class="projectcontent">
+                    <img class="projecticon" src="./img/iSimonSays.png" />
+                </div>
+                <div class="portfolioproject" style="font-family: 'Bungee'; background-image: url('./img/sneakers.jpg');">Decade Footwear</div>
+                <div class="projectcontent"></div>
+                <div class="portfolioproject" style="font-family: 'Fredoka One'; background-image: url('./img/icons.png');">Hey, I'm Bored!</div>
+                <div class="projectcontent"></div>
+                <div class="portfolioproject"> Project Four </div>
+                <div class="projectcontent"></div>
               </section>
           </div>
         </main>
@@ -64,16 +65,17 @@
 
         <main id="designpage">
           <h1>Design</h1>
+          <p>My past designs in graphic and advertising.</p>
           <div id="designcontent">
               <section class="projects">
-                <div id="project1" class="portfolioproject">iSimon Says</div>
-                <div id="isimonsays" class="projectcontent"></div>
-                <div id="project2" class="portfolioproject">Decade Footwear</div>
-                <div id="decadefootwear" class="projectcontent"></div>
-                <div id="project3" class="portfolioproject">Hey, I'm Bored!</div>
-                <div id="heyimbored" class="projectcontent"></div>
-                <div id="project4" class="portfolioproject"> Project Four </div>
-                <div id="project4content" class="projectcontent"></div>
+                <div class="portfolioproject">iSimon Says</div>
+                <div class="projectcontent"></div>
+                <div class="portfolioproject">Decade Footwear</div>
+                <div class="projectcontent"></div>
+                <div class="portfolioproject">Hey, I'm Bored!</div>
+                <div class="projectcontent"></div>
+                <div class="portfolioproject"> Project Four </div>
+                <div class="projectcontent"></div>
               </section>
           </div>
         </main>
@@ -82,36 +84,18 @@
 
         <main id="aboutpage">
           <h1>About</h1>
-        <div id="aboutcontent">
           <p>Almost everything you need to know about me.</p>
-
-          <div id="importantinfo">
-            <div id="bio">
-              <h2>Brief Bio</h2>
-              <div id="profilepic"></div>
-              <p>blah blah blah</p>
+            <div id="aboutcontent">
+              <h2>BRIEF BIO</h2>
+              <div id="bio">
+                <div id="profilepic"></div>
+                <div id="profiledescription">
+                  <p>blah blah blah</p>
+                  <button><a href="#">Download My Resume</a></button>
+              </div>
             </div>
-
-            <div id="contact">
-              <h2>Contact Info</h2>
-              <h3>nguyendthinh@outlook.com • Linkedin</h3>
-              <button><a href="#">Download My Resume</a></button>
-            </div>
-          </div>
-
-          <form action="mailto:nguyendthinh@outlook.com" method="post" enctype="text/plain">
-          Name:<br>
-          <input type="text" name="name"><br>
-          E-mail:<br>
-          <input type="text" name="mail"><br>
-          Comment:<br>
-          <input type="text" name="comment" size="50"><br><br>
-          <input type="submit" value="Send">
-          <input type="reset" value="Reset">
-          </form>
-
-
-        </div>
+          <h2>CONTACT INFO</h2>
+          <h3>nguyendthinh@outlook.com • Linkedin</h3>
         </main>
 
         <!-- ////// -->
@@ -130,5 +114,7 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X','auto');ga('send','pageview');
         </script>
+
     </body>
+
 </html>
