more styling fixes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Righteous|Audiowide|Bungee|Fredoka+One" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Righteous|Audiowide|Bungee|Fredoka+One|Lalezar" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
 
     <body>
@@ -43,20 +43,35 @@
         <!-- ////// -->
 
         <main id="codingpage">
-          <h1>Coding</h1>
+          <h1 class="sectiontitle">CODING</h1>
           <p>View all of my personal and ongoing coding programs.</p>
           <div id="codingcontent">
               <section class="projects">
-                <div class="portfolioproject" style="font-family: 'Audiowide'; background-image: url('./img/harddrive.jpg')">iSimon Says</div>
+
+                <div class="portfolioproject" style="background-image: url('./img/harddrive.jpg');">iSimon Says</div>
                 <div class="projectcontent">
-                    <img class="projecticon" src="./img/iSimonSays.png" />
+                    <div class="coding">
+                      <img class="projecticon" src="./img/iSimonSays.png" />
+                      <p>Cookout is a popular fast food chain amongst the Southern coast college crowd.
+                        Its advertisement is entirely done by word-of-mouth. But if it were to have proper
+                        advertisement, it would highlight the many unique aspects that only Cook Out can offer
+                        that no other fast food restaurants can't.</p>
+                        <p>Cookout is a popular fast food chain amongst the Southern coast college crowd.
+                          Its advertisement is entirely done by word-of-mouth. But if it were to have proper
+                          advertisement, it would highlight the many unique aspects that only Cook Out can offer
+                          that no other fast food restaurants can't.</p>
+                    </div>
                 </div>
-                <div class="portfolioproject" style="font-family: 'Bungee'; background-image: url('./img/sneakers.jpg');">Decade Footwear</div>
+
+                <div class="portfolioproject" style="background-image: url('./img/sneakers.jpg')">Decade Footwear</div>
                 <div class="projectcontent"></div>
-                <div class="portfolioproject" style="font-family: 'Fredoka One'; background-image: url('./img/icons.png');">Hey, I'm Bored!</div>
+
+                <div class="portfolioproject" style="background-image: url('./img/icons.png')">Hey, I'm Bored!</div>
                 <div class="projectcontent"></div>
-                <div class="portfolioproject"> Project Four </div>
+
+                <div class="portfolioproject" style="background-image: url('./img/blocks.png')"> Block Party </div>
                 <div class="projectcontent"></div>
+
               </section>
           </div>
         </main>
@@ -64,18 +79,71 @@
         <!-- ////// -->
 
         <main id="designpage">
-          <h1>Design</h1>
+          <h1 class="sectiontitle">DESIGN</h1>
           <p>My past designs in graphic and advertising.</p>
           <div id="designcontent">
+
               <section class="projects">
-                <div class="portfolioproject">iSimon Says</div>
-                <div class="projectcontent"></div>
-                <div class="portfolioproject">Decade Footwear</div>
-                <div class="projectcontent"></div>
-                <div class="portfolioproject">Hey, I'm Bored!</div>
-                <div class="projectcontent"></div>
-                <div class="portfolioproject"> Project Four </div>
-                <div class="projectcontent"></div>
+
+                <div class="portfolioproject" style="background-image: url('./img/cookout.jpg')">Cookout</div>
+                <div class="projectcontent">
+                  <div class="description">
+                    <p>Cookout is a popular fast food chain amongst the Southern coast college crowd.
+                      Its advertisement is entirely done by word-of-mouth. But if it were to have proper
+                      advertisement, it would highlight the many unique aspects that only Cook Out can offer
+                      that no other fast food restaurants can't.</p>
+                  </div>
+                  <div class="designcontent">
+                    <img src="./img/milkshake.jpg" />
+                    <img src="./img/burger.jpg" />
+                    <img src="./img/corndog.jpg" />
+                  </div>
+                </div>
+
+                <div class="portfolioproject" style="background-image: url('./img/epiphone.jpg')">Epiphone Guitar</div>
+                <div class="projectcontent">
+                  <div class="description">
+                    <p>How do we get people to be interested in investing their time to learning how to play
+                      a guitar? By highlighting how the guitar is regarded as a universally appealing music instrument
+                      compared to other less "cool" counterparts.</p>
+                  </div>
+                  <div class="designcontent">
+                    <img src="./img/airguitar1.jpg" />
+                    <img src="./img/airguitar2.jpg" />
+                    <img src="./img/airguitar3.jpg" />
+                  </div>
+                </div>
+
+                <div class="portfolioproject" style="background-image: url('./img/coinstar.jpg')">Coinstar</div>
+                <div class="projectcontent">
+                  <div class="description">
+                    <p>Coinstar Machines have only one function: to count accumulated and unspent change/coins into cash
+                      vouchers. What are some proactive ways to increase its usage beyond its original design purpose? One
+                      possible solution: Giving the users the option to donate their unspent change/coins to a local cause. </p>
+                  </div>
+                  <div id="coinstar" style="flex-direction: column" class="designcontent">
+                    <img src="./img/Coinstar1.png" />
+                    <img src="./img/Coinstar2.png" />
+                    <img src="./img/Coinstar3.png" />
+                    <img src="./img/Coinstar4.png" />
+                  </div>
+                </div>
+
+                <div class="portfolioproject" style="background-image: url('./img/thirdsurface.jpg')">Third Surface</div>
+                <div class="projectcontent">
+                  <div class="description">
+                    <p>Working as the marketing consultant for a 3-D Printing Company, I designed promotional materials that
+                      were used for circulation to make locals aware of Third Surface's promotional activities.  </p>
+                  </div>
+                  <div class="designcontent">
+                    <img src="./img/thirdsurface1.jpg" />
+                    <img src="./img/thirdsurface2.jpg" />
+                    <img src="./img/thirdsurface3.jpeg" />
+                  </div>
+                </div>
+
+                <!-- <div class="portfolioproject">Other Design Works</div>
+                <div class="projectcontent"></div> -->
               </section>
           </div>
         </main>
@@ -83,19 +151,21 @@
         <!-- ////// -->
 
         <main id="aboutpage">
-          <h1>About</h1>
+          <h1 class="sectiontitle">ABOUT</h1>
           <p>Almost everything you need to know about me.</p>
             <div id="aboutcontent">
-              <h2>BRIEF BIO</h2>
               <div id="bio">
                 <div id="profilepic"></div>
                 <div id="profiledescription">
-                  <p>blah blah blah</p>
+                  <p>As a web developer with a background in advertising
+                    and graphic design, my mission is to create visually-appealing
+                    web-based applications that effectively convey my client’s
+                    branding to customers. My experience allows me to adapt and come
+                    up with creative solutions that are tailored to a diverse clientele.</p>
                   <button><a href="#">Download My Resume</a></button>
               </div>
+              <h3>nguyendthinh@outlook.com • Linkedin • Github</h3>
             </div>
-          <h2>CONTACT INFO</h2>
-          <h3>nguyendthinh@outlook.com • Linkedin</h3>
         </main>
 
         <!-- ////// -->
