--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Righteous|Audiowide|Bungee|Fredoka+One|Lalezar" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Righteous|Lalezar|Cabin" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
 
     <body>
@@ -51,26 +51,48 @@
                 <div class="portfolioproject" style="background-image: url('./img/harddrive.jpg');">iSimon Says</div>
                 <div class="projectcontent">
                     <div class="coding">
-                      <img class="projecticon" src="./img/iSimonSays.png" />
-                      <p>Cookout is a popular fast food chain amongst the Southern coast college crowd.
-                        Its advertisement is entirely done by word-of-mouth. But if it were to have proper
-                        advertisement, it would highlight the many unique aspects that only Cook Out can offer
-                        that no other fast food restaurants can't.</p>
-                        <p>Cookout is a popular fast food chain amongst the Southern coast college crowd.
-                          Its advertisement is entirely done by word-of-mouth. But if it were to have proper
-                          advertisement, it would highlight the many unique aspects that only Cook Out can offer
-                          that no other fast food restaurants can't.</p>
+                      <a target="_blank" href="https://nguyendthinh.github.io/simonsays/"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <p>My futuristic take on the classic Simon Says game where one must repeat exactly the sequence of colors that Simon says to repeat.
+                      I used JavaScript in conjunction with a jQuery library in order to successfully program the logic behind the game.</p>
+                      <p> By combining recursive functions with the setTimeout and setInterval methods, the "computer" is able to remember and animate the sequence of colors
+                        as well as generate a new random color for the next round.</p>
+                      <p>The computer compares two arrays, one containing the sequence of colors it created and one containing the sequence of colors that
+                        the user clicked on, in order to determine whether or not the user has successfully repeated the correct pattern. </p>
                     </div>
                 </div>
 
                 <div class="portfolioproject" style="background-image: url('./img/sneakers.jpg')">Decade Footwear</div>
-                <div class="projectcontent"></div>
+                  <div class="projectcontent">
+                    <div class="coding">
+                      <a target="_blank" href="https://thinh-sneaker-site.herokuapp.com/brands"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <p>An ongoing project: I plan on creating a fully-functional shoe shopping website for my cousin and his shoe business, Decade Footwear.
+                      The foundation for this website so far is built on Ruby on Rails.</p>
+                      <p>I have successfully implemented a shopping cart feature as well as an admin/user login and the ability for admin to perform CRUD actions
+                        on the shoe inventory. I am currently laying out the plans to implement other shopping site features as well as implement an Angular front-end.</p>
+                    </div>
+                  </div>
 
                 <div class="portfolioproject" style="background-image: url('./img/icons.png')">Hey, I'm Bored!</div>
-                <div class="projectcontent"></div>
+                  <div class="projectcontent">
+                    <div class="coding">
+                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <p>A fun application that aims at helping people find nearby events at a last-minute notice... or when they simply need their boredom relieve right away!</p>
+                      <p>This is a MEAN stack (MongoDB, Express, Angular, Node) application that utilizes a RESTful server and integration with a third party API that specializes in
+                        listing nearby local events. The application retrieves relevant data based on the location that the user put in as well as the interest that they select!</p>
+                      <p>The current API unfortunately has a lot of bugs within its data compilation and we are currently seeking a new API to implement.</p>
+                    </div>
+                    <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b>
+                  </div>
 
                 <div class="portfolioproject" style="background-image: url('./img/blocks.png')"> Block Party </div>
-                <div class="projectcontent"></div>
+                  <div class="projectcontent">
+                    <div class="coding">
+                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every grid on the gameboard to be the same color.
+                        In order to do that, just click on a grid and watch as the adjacent grids change color!</p>
+                      <p>The seperation of concerns as well as the concept of components made the functionality much easier to implement as well as avoiding bugs and glitches.</p>
+                    </div>
+                  </div>
 
               </section>
           </div>
@@ -162,9 +184,9 @@
                     web-based applications that effectively convey my client’s
                     branding to customers. My experience allows me to adapt and come
                     up with creative solutions that are tailored to a diverse clientele.</p>
-                  <button><a href="#">Download My Resume</a></button>
+                  <button><a target="_blank" href="./ThinhNguyen.pdf">Download My Resume</a></button>
               </div>
-              <h3>nguyendthinh@outlook.com • Linkedin • Github</h3>
+              <h3>nguyendthinh@outlook.com • <a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
             </div>
         </main>
 
