--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="portfolioproject" style="background-image: url('./img/sneakers.jpg')">Decade Footwear</div>
                   <div class="projectcontent">
                     <div class="coding">
-                      <a target="_blank" href="https://thinh-sneaker-site.herokuapp.com/brands"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <a target="_blank" href="https://thinh-sneaker-site.herokuapp.com/brands"><img class="projecticon" src="./img/decadefootwear.png" /></a>
                       <p>An ongoing project: I plan on creating a fully-functional shoe shopping website for my cousin and his shoe business, Decade Footwear.
                       The foundation for this website so far is built on Ruby on Rails.</p>
                       <p>I have successfully implemented a shopping cart feature as well as an admin/user login and the ability for admin to perform CRUD actions
@@ -75,19 +75,19 @@
                 <div class="portfolioproject" style="background-image: url('./img/icons.png')">Hey, I'm Bored!</div>
                   <div class="projectcontent">
                     <div class="coding">
-                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/heyimbored.png" /></a>
+                      <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b><br>
                       <p>A fun application that aims at helping people find nearby events at a last-minute notice... or when they simply need their boredom relieve right away!</p>
                       <p>This is a MEAN stack (MongoDB, Express, Angular, Node) application that utilizes a RESTful server and integration with a third party API that specializes in
                         listing nearby local events. The application retrieves relevant data based on the location that the user put in as well as the interest that they select!</p>
                       <p>The current API unfortunately has a lot of bugs within its data compilation and we are currently seeking a new API to implement.</p>
                     </div>
-                    <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b>
                   </div>
 
                 <div class="portfolioproject" style="background-image: url('./img/blocks.png')"> Block Party </div>
                   <div class="projectcontent">
                     <div class="coding">
-                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/iSimonSays.png" /></a>
+                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/blockparty.png" /></a>
                       <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every grid on the gameboard to be the same color.
                         In order to do that, just click on a grid and watch as the adjacent grids change color!</p>
                       <p>The seperation of concerns as well as the concept of components made the functionality much easier to implement as well as avoiding bugs and glitches.</p>
@@ -184,9 +184,10 @@
                     web-based applications that effectively convey my client’s
                     branding to customers. My experience allows me to adapt and come
                     up with creative solutions that are tailored to a diverse clientele.</p>
-                  <button><a target="_blank" href="./ThinhNguyen.pdf">Download My Resume</a></button>
+                  <button><a target="_blank" href="./ThinhNguyen.pdf">DOWNLOAD MY RESUME</a></button>
               </div>
-              <h3>nguyendthinh@outlook.com • <a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
+              <h3>nguyendthinh@outlook.com</h3>
+              <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
             </div>
         </main>
 
