--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="portfolioproject" style="background-image: url('./img/blocks.png')"> Block Party </div>
                   <div class="projectcontent">
                     <div class="coding">
-                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/blockparty.png" /></a>
+                      <a target="_blank" href="https://nguyendthinh.github.io/BlockParty/"><img class="projecticon" src="./img/blockparty.png" /></a>
                       <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every grid on the gameboard to be the same color.
                         In order to do that, just click on a grid and watch as the adjacent grids change color!</p>
                       <p>The seperation of concerns as well as the concept of components made the functionality much easier to implement as well as avoiding bugs and glitches.</p>
