--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     web-based applications that effectively convey my client’s
                     branding to customers. My experience allows me to adapt and come
                     up with creative solutions that are tailored to a diverse clientele.</p>
-                  <button><a target="_blank" href="./ThinhNguyen.pdf">DOWNLOAD MY RESUME</a></button>
+                  <button><a target="_blank" href="./ThinhNguyen.pdf">VIEW MY RESUME</a></button>
               </div>
               <h3>nguyendthinh@outlook.com</h3>
               <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
