--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <![endif]-->
 
         <ul class="topnav" id="myTopnav">
-          <li><a href="#" id="home">HOME</a></li>
-          <li><a href="#" id="coding">CODING</a></li>
-          <li><a href="#" id="design">DESIGN</a></li>
-          <li><a href="#" id="about">ABOUT</a></li>
+          <li><a href="#home" id="home">HOME</a></li>
+          <li><a href="#coding" id="coding">CODING</a></li>
+          <li><a href="#design" id="design">DESIGN</a></li>
+          <li><a href="#about" id="about">ABOUT</a></li>
           <li class="icon">
             <a href-"javascript:void(0);" onclick="navBar()">&#9776;</a>
           </li>
