--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <![endif]-->
 
         <ul class="topnav" id="myTopnav">
-          <li><a href="#" id="home">HOME</a></li>
-          <li><a href="#" id="coding">CODING</a></li>
-          <li><a href="#" id="design">DESIGN</a></li>
-          <li><a href="#" id="about">ABOUT</a></li>
+          <li><a id="home">HOME</a></li>
+          <li><a id="coding">CODING</a></li>
+          <li><a id="design">DESIGN</a></li>
+          <li><a id="about">ABOUT</a></li>
           <li class="icon">
             <a href-"javascript:void(0);" onclick="navBar()">&#9776;</a>
           </li>
@@ -87,7 +87,7 @@
                 <div class="portfolioproject" style="background-image: url('./img/blocks.png')"> Block Party </div>
                   <div class="projectcontent">
                     <div class="coding">
-                      <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/blockparty.png" /></a>
+                      <a target="_blank" href="https://nguyendthinh.github.io/BlockParty/"><img class="projecticon" src="./img/blockparty.png" /></a>
                       <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every grid on the gameboard to be the same color.
                         In order to do that, just click on a grid and watch as the adjacent grids change color!</p>
                       <p>The seperation of concerns as well as the concept of components made the functionality much easier to implement as well as avoiding bugs and glitches.</p>
@@ -184,7 +184,7 @@
                     web-based applications that effectively convey my client’s
                     branding to customers. My experience allows me to adapt and come
                     up with creative solutions that are tailored to a diverse clientele.</p>
-                  <button><a target="_blank" href="./ThinhNguyen.pdf">DOWNLOAD MY RESUME</a></button>
+                  <button><a target="_blank" href="./ThinhNguyen.pdf">VIEW MY RESUME</a></button>
               </div>
               <h3>nguyendthinh@outlook.com</h3>
               <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
