cross browser styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Righteous|Lalezar|Cabin" rel="stylesheet">        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Righteous|Lalezar|Cabin" rel="stylesheet">
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body>
@@ -74,7 +75,7 @@
                   <div class="projectcontent">
                     <div class="coding">
                       <a target="_blank" href="https://nguyendthinh.github.io/hey-im-bored-angular/#/"><img class="projecticon" src="./img/heyimbored.png" /></a>
-                      <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b><br>
+                      <b>In Collaboration with: Donovan Allen, Juliet Berman, and Diana Gobar</b></br>
                       <p>A fun application that aims at helping people find nearby events at a last-minute notice... or when they simply need their boredom relieve right away!</p>
                       <p>This is a MEAN stack (MongoDB, Express, Angular, Node) application that utilizes a RESTful server and integration with a third party API that specializes in
                         listing nearby local events. The application retrieves relevant data based on the location that the user put in as well as the interest that they select!</p>
@@ -188,6 +189,7 @@
                             </main>
 
 
+
                             <!-- ////// -->
 
                             <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
@@ -206,5 +208,7 @@
                               </script>
 
                             </body>
+
+
 
                             </html>
