--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <li><a href="#" id="design">DESIGN</a></li>
     <li><a href="#" id="about">ABOUT</a></li>
     <li class="icon">
-      <a href-"javascript:void(0);" onclick="navBar()">&#9776;</a>
+      <a id="dropbox" href-"javascript:void(0);" onclick="navBar()">&#9776;</a>
     </li>
   </ul>
   <!-- ////// -->
