--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                     <div class="projectcontent">
                       <div class="coding">
                         <a target="_blank" href="https://nguyendthinh.github.io/BlockParty/"><img class="projecticon" src="./img/blockparty.png" /></a>
-                        <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every grid on the gameboard to be the same color.
-                          In order to do that, just click on a grid and watch as the adjacent grids change color!</p>
-                          <p>The seperation of concerns as well as the concept of components made the functionality much easier to implement as well as avoiding bugs and glitches.</p>
+                        <p>A color-based game that I created using React and vanilla JavaScript. The objective of the game is to get every block on the gameboard to be the same color.
+                          In order to do that, just click on a block and watch as the adjacent blocks change to the color of the block that you clicked on! But watch out, every 20 seconds
+                          the board will change a few blocks on the gameboard to a different color to try to mess you up. Win the game for a cool outcome!</p>
+                          <p>The seperation of concerns as well as the concept of components made the functionality much easier to implement than using jQuery. It also helped to avoid bugs and glitches.</p>
                         </div>
                       </div>
 
