--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 <p>As a web developer with a background in advertising
                                   and graphic design, my mission is to create visually-appealing
                                   web-based applications that effectively convey my client’s
-                                  branding to customers. My experience allows me to adapt and come
+                                  branding to consumers. My experience allows me to adapt and come
                                   up with creative solutions that are tailored to a diverse clientele.</p>
                                   <a target="_blank" href="./ThinhNguyen.pdf"><button>VIEW MY RESUME</button></a>
                                 </div>
