--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <div class="projectcontent">
                               <div class="description">
                                 <p>Working as the marketing consultant for a 3-D Printing Company, I designed promotional materials that
-                                  were used for circulation to make locals aware of Third Surface's promotional activities.  </p>
+                                  were used for circulation to make locals aware of Third Surface's promotional activities.</p>
                                 </div>
                                 <div class="designcontent">
                                   <img src="./img/thirdsurface1.jpg" />
@@ -163,6 +163,23 @@
                                   <img src="./img/thirdsurface3.jpeg" />
                                 </div>
                               </div>
+
+                              <div class="portfolioproject" style="background-image: url('./img/sba.png')">SB&amp;A</div>
+                              <div class="projectcontent">
+                                <div class="description">
+                                  <p>As a design intern for an ad agency that specializes in senior living, I’ve created various graphics
+                                    to aid and inform seniors and their loved ones of relevant upcoming events and information. These graphics
+                                    ranged from pamphlets, newsprint, ads, infographics, etc.</p>
+                                  </div>
+                                  <div id="sba" class="designcontent">
+                                    <img src="./img/door1.jpeg" />
+                                    <img src="./img/door2.jpeg" />
+                                    <img src="./img/door3.jpeg" />
+                                    <img src="./img/friendship1.jpeg" />
+                                    <img src="./img/friendship2.jpeg" />
+                                    <img src="./img/friendship2.jpeg" />
+                                  </div>
+                                </div>
 
                             </section>
                           </div>
