--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!--[if !IE]->
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
+  <div class="wrapper">
   <ul class="topnav" id="myTopnav">
     <li><a href="#" id="home">HOME</a></li>
     <li><a href="#" id="coding">CODING</a></li>
@@ -43,6 +44,7 @@
 
   <main id="codingpage">
     <h1 class="sectiontitle">CODING</h1>
+
     <p>View all of my personal and ongoing coding programs.</p>
     <div id="codingcontent">
       <section class="projects">
@@ -95,6 +97,10 @@
                           </div>
 
                     </section>
+
+                  </div>
+                  <div class="footer">
+                    All work Copyright © 2017 Thinh Nguyen
                   </div>
                 </main>
 
@@ -183,6 +189,9 @@
 
                             </section>
                           </div>
+                          <div class="footer">
+                            All work Copyright © 2017 Thinh Nguyen
+                          </div>
                         </main>
 
                         <!-- ////// -->
@@ -204,9 +213,18 @@
                                 <h3>nguyendthinh@outlook.com</h3>
                                 <h3 style="margin-top: 0;"><a target="_blank" href="https://www.linkedin.com/in/thinhdnguyen">Linkedin</a> • <a target="_blank" href="https://github.com/nguyendthinh">Github</a></h3>
                               </div>
+                              <div class="footer">
+                                All work Copyright © 2017 Thinh Nguyen 
+                              </div>
                             </main>
 
+                            <div class="push"></div>
 
+                          </div>
+
+                            <!-- <footer>
+                              Copyright 2016 Thinh Nguyen
+                            </footer> -->
 
                             <!-- ////// -->
 
